Fixed many things

--- a/local.properties
+++ b/local.properties
@@ -6,3 +6,4 @@
 # header note.
 #Tue May 25 09:56:23 UYT 2021
 sdk.dir=/Users/gaston/Library/Android/sdk
+api_key=VCFPeljtVL2u3tpHOQviVpO95ve7UQQ3N3tVed7j
